--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <source src="assets/musics/normal-world.mpeg" aria-details="Audio do site" />
         </audio>
         <div class="header-content">
-          <img class="invert-element" src="assets/images/banner/logo.svg" alt="Imagem principal Mundo Invertido. Semana Frontend DIO." />
+          <img class="invert-element" src="asserts/images/banner/logo.svg" alt="Imagem principal Mundo Invertido. Semana Frontend DIO." />
           <p class="invert-element" role="text">
             Uma jornada para quem não tem medo do desconhecido. O caminho para o
             Mundo invertido é incerto, repleto de obstáculos e perigos. Porém, a
@@ -44,7 +44,7 @@
   
           <img
             class="invert-element"
-            src="assets/images/content/inverted-world.png"
+            src="asserts/images/content/inverted-world.png"
             alt="Image ilustrativa do Mundo Invertido"
           />
         </section>
@@ -77,13 +77,13 @@
             <h2>A segunda série mais assistida da Netflix</h2>
             <ul class="gallery-container" role="gallery">
               <li class="gallery-image invert-element">
-                <img src="assets/images/content/serie-image-01.png" alt="Imagem de Vecna" />
+                <img src="asserts/images/content/serie-image-01.png" alt="Imagem de Vecna" />
               </li>
               <li class="gallery-image invert-element">
-                <img src="assets/images/content/serie-image-02.png" alt="Imagem ilustrativa dos amigos de Eleven" />
+                <img src="asserts/images/content/serie-image-02.png" alt="Imagem ilustrativa dos amigos de Eleven" />
               </li>
               <li class="gallery-image invert-element">
-                <img src="assets/images/content/serie-image-03.png" alt="Imagem Eleven assustada" />
+                <img src="asserts/images/content/serie-image-03.png" alt="Imagem Eleven assustada" />
               </li>
             </ul>
           </div>
@@ -129,7 +129,7 @@
           Projeto construído para fins didáticos, com o objetivo de colocar em
           prática os conhecimentos de HTML, CSS e JavaScript aprendidos na DIO._
         </p>
-        <img src="assets/images/footer/logo.svg" alt="">
+        <img src="asserts/images/footer/logo.svg" alt="Logo dio">
       </footer>
       
       <script type="module" src="assets/js/main.js"></script>
