--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundo Invertido | Semana Front-end</title>
 
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="asserts/css/styles.css" />
 </head>
 <body class="light-theme" aria-label="O site está utilizando o tema light" role="body">
     <header aria-label="Cabeçalho da página.">
@@ -25,7 +25,9 @@
           <button id="switch-theme-button" onclick="switchTheme()">Inverter Mundos</button>
         </div>
   
-        <div id="top-characters" class="world-characters"></div>
+        <div id="top-characters" class="world-characters">
+          
+        </div>
       </header>
   
       <main>
@@ -33,7 +35,7 @@
   
         <section id="section-inverted-world" class="container">
           <div class="section-texts">
-            <h1>O Mundo Invertido</h1>
+            <h2>O Mundo Invertido</h2>
             <p role="text">
               O Mundo Invertido parece uma cópia do nosso mundo, mas com criaturas
               horrendas, tempestades assustadoras, muita escuridão e entidades
