--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="light-theme" aria-label="O site está utilizando o tema light" role="body">
     <header aria-label="Cabeçalho da página.">
         <audio id="music" autoplay>
-          <source src="assets/musics/normal-world.mpeg" aria-details="Audio do site" />
+          <source src="asserts/musics/normal-world.mpeg" aria-details="Audio do site" />
         </audio>
         <div class="header-content">
           <img class="invert-element" src="asserts/images/banner/logo.svg" alt="Imagem principal Mundo Invertido. Semana Frontend DIO." />
@@ -136,7 +136,26 @@
       
       <script type="module" src="assets/js/main.js"></script>
       <script>
-        
+         window.addEventListener('click', function() {
+        const audio = document.getElementById('music');
+        audio.play();
+        audio.volume = 0.2;
+      });
+
+      function switchTheme() {
+        document.body.classList.toggle('dark-theme');
+        document.body.classList.toggle('light-theme');
+
+        document.body.setAttribute('aria-label', 'Trocando o tema');
+
+        const theme = document.body.classList[0];
+        const music = theme === 'light-theme' ? 'normal-world.mpeg' : 'inverted-world.mpeg'
+
+        const audio = document.getElementById('music');
+        audio.src = `assets/musics/${music}`;
+        audio.play();
+        audio.volume = 0.2;
+      }
       </script>
 </body>
 </html>
