--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <input type="email" name="email" id="txtEmail">
             
                 <label for="level">Level</label>
-                <input type="text" name="level" id="txtLevel">
+                <input type="number" name="level" id="txtLevel">
             
                 <label for="character">Personagem</label>
                 <textarea name="character" cols="30" rows="10" id="txtCharacter"></textarea>
@@ -152,10 +152,12 @@
         const music = theme === 'light-theme' ? 'normal-world.mpeg' : 'inverted-world.mpeg'
 
         const audio = document.getElementById('music');
-        audio.src = `assets/musics/${music}`;
+        audio.src = `asserts/musics/${music}`;
         audio.play();
         audio.volume = 0.2;
       }
       </script>
+
+      <script src="asserts/js/main.js" type="module"></script>
 </body>
 </html>
