Validação do e-mail finalizada

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body class="light-theme" aria-label="O site está utilizando o tema light" role="body">
     <header aria-label="Cabeçalho da página.">
-        <audio id="music" autoplay>
+        <!-- <audio id="music" autoplay>
           <source src="asserts/musics/normal-world.mpeg" aria-details="Audio do site" />
-        </audio>
+        </audio> -->
         <div class="header-content">
           <img class="invert-element" src="asserts/images/banner/logo.svg" alt="Imagem principal Mundo Invertido. Semana Frontend DIO." />
           <p class="invert-element" role="text">
@@ -56,7 +56,7 @@
             <iframe
               width="460"
               height="215"
-              src="https://www.youtube.com/embed/SJ9EFhQ3ANQ?controls=0"
+              src="https://www.youtube.com/embed/b6XKRA2DFQI"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -109,7 +109,7 @@
                 <label for="name">Nome Completo</label>
                 <input type="text" name="name" id="txtName" required>
             
-                <label for="email">E-mail</label>
+                <label for="emai">E-mail</label>
                 <input type="email" name="email" id="txtEmail" required>
             
                 <label for="level">Level</label>
