--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body class="light-theme" aria-label="O site está utilizando o tema light" role="body">
     <header aria-label="Cabeçalho da página.">
-        <!-- <audio id="music" autoplay>
+        <audio id="music" autoplay>
           <source src="asserts/musics/normal-world.mpeg" aria-details="Audio do site" />
-        </audio> -->
+        </audio>
         <div class="header-content">
           <img class="invert-element" src="asserts/images/banner/logo.svg" alt="Imagem principal Mundo Invertido. Semana Frontend DIO." />
           <p class="invert-element" role="text">
